<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.ivicel.steam.slowdowng.ServerEditActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_name"
        android:layout_marginLeft="36dp"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_server_name"/>

    <TextView
        android:id="@+id/textView2"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_address"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_server_address"
        app:layout_constraintRight_toRightOf="@+id/textView"/>

    <EditText
        android:id="@+id/edit_server_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/server_name"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.25"/>

    <EditText
        android:id="@+id/edit_server_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/server_example"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/edit_server_name"
        app:layout_constraintRight_toRightOf="@+id/edit_server_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_server_name"
        />

    <Button
        android:id="@+id/save_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_server"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_server_address"
        app:layout_constraintRight_toLeftOf="@+id/discard_server"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/discard_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard_server"
        app:layout_constraintTop_toTopOf="@+id/save_server"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/save_server"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/edit_server_address"/>
</android.support.constraint.ConstraintLayout>
