<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:id="@+id/parent_layout">

    <TextView
        android:id="@+id/key_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/parent_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#3933363F"
        app:layout_constraintRight_toRightOf="@+id/activate_item_key"
        app:layout_constraintTop_toBottomOf="@+id/key_text"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:background="#3933363F"
        app:layout_constraintRight_toRightOf="@+id/activate_item_key"
        app:layout_constraintTop_toBottomOf="@+id/activate_item_result"/>

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#3933363F"
        app:layout_constraintRight_toRightOf="@+id/activate_item_key"
        app:layout_constraintTop_toBottomOf="@+id/activate_item_detail"/>

    <TextView
        android:id="@+id/activate_item_key"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        tools:text="RHDB2-5VQC2-QX7JM"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_text"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/parent_layout"/>

    <TextView
        android:id="@+id/activate_item_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/result"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/view"/>

    <TextView
        android:id="@+id/activate_item_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        tools:text="重复激活"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="@+id/view"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/result"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintLeft_toLeftOf="@+id/key_text"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/detail"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sub_detail"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/view3"/>

    <View
        android:visibility="gone"
        android:id="@+id/view4"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#3933363F"
        app:layout_constraintTop_toBottomOf="@+id/sub_text"/>

    <LinearLayout
        android:id="@+id/sub_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/sub_text"
        app:layout_constraintRight_toRightOf="@+id/activate_item_detail"
        app:layout_constraintTop_toBottomOf="@+id/view4">


    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30"/>


</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
